fix: apply correct environment variables to dapp docker container based on task execution mode (#656)